refactor: resolve SonarQube findings across changed files
- S6619: split chained ?: in ChatConsolePanel.kt
- S107: reduce params in ChatController.ts (addToolCall/upsertToolChip)
- S6524/S6511: fixes in AcpConnectPanel.kt
- S4030: PsiBridgeService.java HashSet fix
- S1135: ProjectFilesPanel.java Javadoc rephrase
- S6916: CodexAppServerClient.java restructure handleItemCompleted
- S1192/S1141/S3776/S6541: SessionStoreV2.java full refactor

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>